# tsisa-lab-01

./: CMakeLists.txt  README.md
include/: methods.hpp
search_results/: dichotomy_result.txt  passive_result.txt
sources/: main.cpp  methods.cpp
